# AI_Learnings

./: AI_Notes.txt  README.md
project_analyser/: ARCHITECTURE.md  EXAMPLES.py  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  README.md  START_HERE.md  requirements.txt
project_analyser/ai/: pipeline.py  projectManagement.py
project_analyser/ai/dataset/: __init__.py  codeIndexer.py  codeTokenizer.py  datasetManager.py  datasetTokenised.py
project_analyser/ai/llm/: __init__.py  codeInference.py  incrementalTraining.py
svn2git/: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.txt  QUICKSTART.md  QUICK_REFERENCE.md  README.md  config.yaml.example  pyproject.toml  requirements.txt  setup.py
svn2git/svn2git_tool/: __init__.py  main.py
svn2git/svn2git_tool/adapters/: __init__.py  git_adapter.py  svn_adapter.py
svn2git/svn2git_tool/core/: __init__.py  config.py  orchestrator.py  state_manager.py
svn2git/svn2git_tool/utils/: __init__.py  error_handler.py  logger.py
svn2git/tests/: __init__.py  test_all.py
test/ai/dataset/: datasetCreate.py  datasetTokenised.py
test/ai/llm/: loadTestDataset.py
test/ai/llm/gpt2-java/checkpoint-9/: config.json  generation_config.json  model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
test/ai/torch/: computational_graph  testAutoGrad.py  testTensor.py
